# parallax

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
api/: app.py  schemas.py
benchmark/: comparator.py  metrics.py  quality.py  runner.py
cli/: main.py
config/: loader.py  settings.yaml
data/: prompts.json
docs/: architecture.md
exporter/: manifest.py  report.py
inference/: generator.py  loader.py
services/: benchmark.py  export.py  inference.py  serving.py  state.py
tests/: test_benchmark.py  test_cli.py  test_inference.py  test_services.py  test_tracking.py
tracking/: report.py  writer.py
utils/: constants.py  file_utils.py  loader.py  logger.py
