[project]
name = "parallax"
version = "0.1.0"
description = "A Local LLM experimentation and serving platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "psutil>=6.0.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include=[
    "cli*",
    "api*",
    "config*",
    "exporter*",
    "inference*",
    "benchmark*",
    "utils*",
    "services*",
]
exclude = ["tests*", "data*", "artifacts*", "docs*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend="setuptools.build_meta"


[project.scripts]
parallax = "cli.main:app"

